--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "grunt"
   },
   "keywords": [
     "angular"
@@ -18,6 +19,13 @@
     "babel-runtime": "^6.0.14",
     "css-loader": "^0.22.0",
     "file-loader": "^0.8.4",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-webpack": "^1.0.11",
+    "json-loader": "^0.5.3",
     "node-sass": "^3.4.1",
     "raw-loader": "^0.5.1",
     "sass-loader": "^3.1.1",
