--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "tester",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "grunt"
+    "start": "webpack-dev-server --config ./webpack.config.js",
+    "clear": "rimraf ./public",
+    "build": "npm run clear && webpack --config ./webpack.config.js"
   },
   "keywords": [
     "angular"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shreyner/teach-tester.git"
+  },
   "author": "Alexander Shreyner",
   "license": "MIT",
   "devDependencies": {
@@ -17,17 +23,13 @@
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.2",
     "babel-runtime": "^6.0.14",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.22.0",
     "file-loader": "^0.8.4",
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-webpack": "^1.0.11",
     "json-loader": "^0.5.3",
     "node-sass": "^3.4.1",
     "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.4",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
